# rusty-icfpc-2024

./: Cargo.toml  minisat_run.sh  output.txt
examples/: minisat.txt
solutions/: 10-flat.txt  11-flat.txt  12-2.txt  12-decompose.txt  12-draft.py  12.txt  3.txt  5.txt  6.txt  7-2.txt  7-3.txt  7-flat.txt  7-minisat.txt  7.txt  8-minisat-iter.txt  8-minisat-iter2.txt  8-minisat.txt  8.txt  9-flat.txt  tmp.txt
src/: lib.rs  main.rs  sudoku.rs
