[package]
name = "icfpc_2024"
version = "0.1.0"
edition = "2021"
default-run = "icfpc_2024"

[dependencies]
regex = "1"
once_cell = "1.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
